# s7-1200-web-control

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  debian.yml
debian/: changelog  control  copyright  rules
src/: main.rs
