# s7-1200-web-control
# Cargo.toml
# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2020 Benjamin Schilling

[package]
name = "s7-1200-web-control"
version = "0.1.0"
authors = ["Benjamin Schilling <benjamin.schilling33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
clap = "2.33.3"